FIX & CHNG: CardUiFat missing padding right causing the image to be left instead of center and use CardUiQuad props for showing info

--- a/src/CardUiFat.css
+++ b/src/CardUiFat.css
@@ -28,7 +28,7 @@
 .cardUiFat__body {
     display: flex;
     flex-grow: 1;
-    padding: 0 20px 0 0;
+    padding: 0 20px 0 20px;
     margin-bottom: 20px;
     height: 300px;
 }
@@ -50,8 +50,9 @@
     max-width: 100%;
     max-height: 100%;
     width: 100%;
+    height: 600px;
     margin: auto;
-    object-fit: contain;
+    /* object-fit: contain; */
 }
 
 .cardUiFat__footer {
